Prevent flicker on page load with phone number by initially hiding it and showing it on page ready

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -201,12 +201,13 @@ nav
   font-size: 72pt
   color: white
   background: black
-  opacity: 0.9
+  opacity: 0
   transition: opacity 0.4s
+  pointer-events: none
 
-  &.hidden
-    opacity: 0
-    pointer-events: none
+  &.show
+    opacity: 0.9
+    pointer-events: auto
 
 .footer
   padding-top: 1em
